fix: исправить row-gap для profile__info

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -22,5 +22,6 @@
   .profile__info {
     width: 282px;
     justify-content: center;
+    row-gap: 5px;
   }
 }
